<resources>
    <string name="app_name">SUAS PS</string>

    <string name="emailEdit">Email</string>
    <string name="passwordEdit">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUp">Create Account</string>
    <string name="loginText">Login</string>
    <string name="signOutText">Sign Out</string>
    <string name="SignUPText">Sign Up</string>
    <string name="nameEdit">Name</string>
    <string name="confirmPasswordEdit">Confirm Password</string>
    <string name="forgotPasswordText">Forgot Password</string>
    <string name="resetPasswordText">To reset password, enter your email, press the button and check your email for further instructions</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <string name="returnToLoginTextView">Return to Login Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="room_no">Room No</string>-->
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="add_photo_video">Add Photo</string>
    <string name="submit">Create</string>
    <!--    <string name="service_request">Service Request</string>-->
    <string name="no_data">No Data</string>


    <string name="create_account">Create Account</string>
    <string name="dasboard_title">Dashboard</string>
    <string name="pending_request">Pending</string>
    <string name="ongoing_request">Ongoing</string>
    <string name="solved">Solved</string>
    <string name="room_no">Room</string>
    <string name="serial_no">Serial No:</string>
    <string name="request_description">Description::</string>
    <string name="tenant_no">Tenant No:</string>
    <string name="remember_password">Remember me</string>
    <string name="password_forget_basic_text">Don\'t have an account?</string>
    <string name="create_account_now">Create Account</string>
    <string name="login_text">Login</string>
    <string name="passwordHint">Password</string>
    <string name="nameHint">Name</string>
    <string name="create_service">Service Request</string>
    <string name="complaints">Complaints</string>
    <string name="event_request">Event Request</string>
    <string name="product_listings">Product Listings</string>
    <string name="giveaways">Giveaways</string>
    <string name="service_request">Create Service</string>
    <string name="title">Title</string>
    <string name="dorm">Dorm</string>
    <string name="complaint">Complaint</string>
    <string name="create_complaint">Create Complaint</string>
    <string name="action">Action</string>

</resources>
