<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_request"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="45dp"-->
<!--            android:text="@string/room_no"-->
<!--            android:textSize="14sp"-->
<!--            android:textStyle="italic"-->
<!--            android:typeface="monospace" />-->

        <LinearLayout
            android:layout_marginTop="15dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_weight="1"
                android:id="@+id/roomEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace"
                android:hint="@string/room_no"
                android:inputType="number" />

            <View
                android:layout_width="30dp"
                android:layout_height="match_parent"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:text="@string/contact"-->
<!--                android:textSize="14sp"-->
<!--                android:textStyle="italic"-->
<!--                android:typeface="monospace" />-->

            <EditText
                android:layout_weight="1"
                android:id="@+id/contactEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace"
                android:hint="@string/contact"
                android:inputType="phone" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="italic|bold"
            android:typeface="monospace" />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/outline_grey"
            android:typeface="monospace"
            android:textStyle="italic"
            android:textSize="14sp"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_photo_video"
            android:textSize="14sp"
            android:textStyle="italic|bold"
            android:typeface="monospace" />

        <ImageButton
            android:layout_marginTop="15dp"
            android:id="@+id/addImageOrVideo"
            android:src="@drawable/ic_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:elevation="5dp"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>