<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dashboard_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/event_request"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:layout_weight="2"
                android:id="@+id/titleEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_grey"
                android:ems="10"
                android:inputType="textCapSentences"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dorm"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/dormEditText"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_grey"
                android:ems="10"
                android:inputType="textCapSentences"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/room_no"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/roomEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/outline_grey"
                android:ems="10"
                android:inputType="number"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <EditText
                android:id="@+id/contactEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:background="@drawable/outline_grey"
                android:inputType="phone"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="monospace" />


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/outline_grey"
            android:ems="10"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:textSize="14sp"
            android:textStyle="italic"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/add_photo_video"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageButton
            android:id="@+id/addImageOrVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>